@@ -1,3 +1,9 @@
+2008-09-20  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: Do not disable viewfinder just after one preview.
+	  Repeatedly switching on/off viewfinder mode causes refocus
+	  all the time.
+
 2008-08-28  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c: Increase timeout for mtp proplist reading (from
